add favicon, change site title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+    <title>Ice Cream Team20</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,9 +19,6 @@
     />
   </head>
   <body>
-
-
-    
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/hero-header.html"></include>
     <include src="./partials/products.html"></include>
