--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
     <script src="./js/about-modal.js"></script>
     <script src="./js/mobile-modal.js"></script>
     <script src="./js/contacts-franchise.js"></script>
+    <script src="./js/contacts-map.js"></script>
 
     <!-- -- Скрипт для слайдера -- -->
     <script
