--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     <script src="./js/mobile-modal.js"></script>
     <script src="./js/contacts-franchise.js"></script>
     <script src="./js/contacts-map.js"></script>
+    <script src="./js/header-modal.js"></script>
 
     <!-- -- Скрипт для слайдера -- -->
     <script
