add buy button to mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
     <script src="./js/contacts-franchise.js"></script>
     <script src="./js/contacts-map.js"></script>
     <script src="./js/header-modal.js"></script>
+    <script src="./js/mobile-menu-buy.js"></script>
 
     <!-- -- Скрипт для слайдера -- -->
     <script
